<resources>
    <string name="app_name">RecipeFinder_Nabrodov</string>
    <string name="app_title">Поиск рецептов</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="loginBtnText">Войти</string>
    <string name="searchHint">Ингридиенты (на английском)</string>
    <string name="search">Поиск</string>
    <string name="save">Сохранить</string>
    <string name="favorites">Избранное</string>
    <string name="clear">Очистить</string>
    <string name="cancel">Отмена</string>
    <string name="edit_recipe">Редактирование рецепта</string>
    <string name="recipe_name">Название рецепта</string>
    <string name="instructions">Инструкция приготовления:</string>
    <string name="enter_instruction">Введите инструкцию...</string>
</resources>